<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.resetPass.PswdResetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_22"
            android:textStyle="bold"
            android:layout_margin="@dimen/_12"
            android:textColor="@color/black"
            android:text="@string/heading_one"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_22"
            android:layout_margin="@dimen/_15"
            android:text="@string/heading_two"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etResetPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15"
            android:layout_marginRight="@dimen/_15"
            android:hint="@string/ht_email"
            android:layout_marginTop="@dimen/_10"
            android:drawableLeft="@drawable/avatar"
            android:drawablePadding="@dimen/_08"
            android:background="@drawable/box_edit_text"
            android:lines="1"
            android:padding="@dimen/_10"
            app:backgroundTint="@color/edt_txt_underline" />

        <include
            layout="@layout/error_layout"
            android:id="@+id/llErrorMsg"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnResetPass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40"
            android:layout_marginLeft="@dimen/_15"
            android:layout_marginRight="@dimen/_15"
            android:layout_marginTop="@dimen/_10"
            android:background="@drawable/rectangle_button"
            android:onClick="btnResetPass"
            android:text="@string/btn_cont"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_18" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>